examples/syntax_error/corrupted.js
Promise.resolve('not realy a js file'
